--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -590,7 +590,8 @@
           "sign_in": "Fazer Login",
           "sign_out": "Sair da Conta",
           "sign_up": "Criar Conta",
-          "transactions": "Transações"
+          "transactions": "Transações",
+          "wallets": "Carteiras"
         }
       },
       "profile_share_invites": {
@@ -748,12 +749,35 @@
             "title": "Re-enviar email de desbloqueio de conta"
           }
         }
+      },
+      "wallets": {
+        "form": {
+          "cancel": "Cancelar",
+          "edit_title": "Editar Carteira",
+          "name_label": "Nome",
+          "new_title": "Nova Carteira",
+          "submit": "Salvar"
+        },
+        "index": {
+          "destroy": "Desabilitar",
+          "edit": "Editar",
+          "new": "Nova Carteira",
+          "title": "Carteiras"
+        },
+        "list": {
+          "disabled": "Desabilitada",
+          "reenable_label": "Reabilitar"
+        }
       }
     },
     "wallets": {
       "create": {
         "error": "Carteira não pode ser criada: %{error}",
         "success": "Carteira \"%{name}\" foi criada com sucesso."
+      },
+      "update": {
+        "error": "Carteira \"%{name}\" não pode ser atualizada: %{error}",
+        "success": "Carteira \"%{name}\" foi atualizada com sucesso."
       }
     }
   }
