--- a/config/locales/controllers.pt-BR.yml
+++ b/config/locales/controllers.pt-BR.yml
@@ -59,3 +59,6 @@ pt-BR:
     create:
       success: 'Carteira "%{name}" foi criada com sucesso.'
       error: 'Carteira não pode ser criada: %{error}'
+    update:
+      success: 'Carteira "%{name}" foi atualizada com sucesso.'
+      error: 'Carteira "%{name}" não pode ser atualizada: %{error}'
