Add option to show disabled wallets

--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -712,6 +712,7 @@
           "destroy": "Disable",
           "edit": "Edit",
           "new": "New Wallet",
+          "show_disabled": "Show Disabled",
           "title": "Wallets"
         },
         "list": {
