--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -226,6 +226,7 @@ en:
         new: New Wallet
         edit: Edit
         destroy: Disable
+        show_disabled: Show Disabled
       list:
         disabled: Disabled
         reenable_label: Re-enable
