--- a/config/locales/views.pt-BR.yml
+++ b/config/locales/views.pt-BR.yml
@@ -223,6 +223,7 @@ pt-BR:
         name_label: Nome
         new_title: Nova Carteira
         edit_title: Editar Carteira
+        show_disabled: Mostrar Desabilitadas
       index:
         title: Carteiras
         new: Nova Carteira
