Users can specify wallet when creating or editing transactions

--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -643,7 +643,9 @@
           "edit_title": "Edit Transaction",
           "name_label": "Name",
           "new_title": "New Transaction",
-          "submit": "Submit"
+          "optional": "Optional",
+          "submit": "Submit",
+          "wallet_label": "Wallet"
         },
         "index": {
           "amount": "Amount",
