--- a/config/locales/views.pt-BR.yml
+++ b/config/locales/views.pt-BR.yml
@@ -1,6 +1,7 @@
 ---
 pt-BR:
   views:
+    app_name: Finance MicroManager
     categories:
       index:
         title: Categorias
@@ -44,6 +45,9 @@ pt-BR:
     landing:
       title: Página Inicial
     layout:
+      footer:
+        version: Versão
+        copyright_notice: '© 2023 Rodrigo Castro'
       page_header:
         action_toggle_label: Ações
       profile_switcher:
@@ -164,6 +168,12 @@ pt-BR:
         edit: Editar
         delete: Remover
         delete_confirmation: Tem certeza? Esta ação não pode ser desfeita.
+        transaction_type: Tipo de Transação
+        spends: Gastos
+        income: Receita
+        seven_days: 7 dias
+        thirty_days: 30 dias
+        ninety_days: 90 dias
         category: Categoria
         amount: Valor
         name: Nome
