--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -10,6 +10,13 @@
           }
         },
         "models": {
+          "profile": {
+            "attributes": {
+              "currency": {
+                "cannot_change_after_creation": "cannot be changed. Please create a new profile for the currency."
+              }
+            }
+          },
           "profile_share": {
             "attributes": {
               "user": {
