--- a/config/locales/active_record.en.yml
+++ b/config/locales/active_record.en.yml
@@ -3,6 +3,10 @@ en:
   activerecord:
     errors:
       models:
+        profile:
+          attributes:
+            currency:
+              cannot_change_after_creation: cannot be changed. Please create a new profile for the currency.
         profile_share:
           attributes:
             user:
