--- a/app/javascript/locales/en.json
+++ b/app/javascript/locales/en.json
@@ -31,7 +31,8 @@
                 "cannot_have_two_reconciliations_in_progress": "There is already a reconciliation in progress. A new reconciliation process cannot be started until the existing one is either finished or cancelled.\n"
               },
               "date": {
-                "cannot_be_older_than_finished_reconciliations": "cannot be older than the date from the last finished reconciliation.\n"
+                "cannot_be_older_than_finished_reconciliations": "cannot be older than the date from the last finished reconciliation.\n",
+                "cannot_finish_date_in_future": "cannot be a date in the future when finishing a reconciliation."
               }
             }
           },
