--- a/config/locales/active_record.pt-BR.yml
+++ b/config/locales/active_record.pt-BR.yml
@@ -46,6 +46,7 @@ pt-BR:
               cannot_change_after_finished: Esta reconciliação já está terminada. Não é mais possível alterá-la.
             date:
               cannot_be_older_than_finished_reconciliations: não pode ser anterior à data da última reconciliação.
+              cannot_finish_date_in_future: não pode ser uma data no futuro ao terminar uma reconciliação.
         user:
           attributes:
             base:
