--- a/config/locales/active_record.en.yml
+++ b/config/locales/active_record.en.yml
@@ -23,6 +23,11 @@ en:
               cannot_be_older_than_finished_reconciliations: >
                 cannot be older than the date from the last finished reconciliation.
               cannot_finish_date_in_future: cannot be a date in the future when finishing a reconciliation.
+        transaction:
+          attributes:
+            base:
+              cannot_alter_prior_to_reconciliation: >
+                Cannot create, edit, or delete any transactions prior to %{date}, the date of the latest reconciliation
         user:
           attributes:
             base:
