--- a/config/locales/mailers.en.yml
+++ b/config/locales/mailers.en.yml
@@ -9,10 +9,10 @@ en:
       hello: Hello
       view_invite_link: View my invites
       sign_up_link: Sign Up for Finance Micromanager
-      invite_paragraph: >
+      invite_paragraph: >-
         %{inviter} has invited you to share their Finance Micromanager profile "%{profile_name}". This will allow you
         to view and manage the profile, create transactions, view reports and statistics data, and much more. To accept,
         click the link below or copy/paste it directly in your browser.
-      new_profile_paragraph: >
+      new_profile_paragraph: >-
         Ops, it looks like you don't yet have an account with Finance Micromanager. You will need to sign up for one
         before accepting the invite. Click the link below or copy/paste it directly in your browser to do that.
