--- a/app/javascript/locales/pt-BR.json
+++ b/app/javascript/locales/pt-BR.json
@@ -726,9 +726,9 @@
           "amount_type_label": "Tipo",
           "cancel": "Cancelar",
           "category_label": "Categoria",
-          "credit_label": "Crédito",
+          "credit_label": "Receita",
           "date_label": "Data",
-          "debit_label": "Débito",
+          "debit_label": "Gasto",
           "edit_title": "Editar Transacão",
           "name_label": "Nome",
           "new_title": "Nova Transação",
