--- a/config/locales/views.pt-BR.yml
+++ b/config/locales/views.pt-BR.yml
@@ -189,8 +189,8 @@ pt-BR:
         amount_type_label: Tipo
         category_label: Categoria
         wallet_label: Carteira
-        credit_label: Crédito
-        debit_label: Débito
+        credit_label: Receita
+        debit_label: Gasto
         date_label: Data
         name_label: Nome
         optional: Opcional
