--- a/config/locales/controllers.en.yml
+++ b/config/locales/controllers.en.yml
@@ -47,6 +47,11 @@ en:
       success: 'Reconciliation for %{date} was successfully cancelled.'
       error: 'Reconciliation for %{date} could not be cancelled: %{error}'
 
+  reconciliations_wallets:
+    create:
+      error: 'Wallet balance could not be updated: %{error}'
+      not_found: 'Wallet balance could not be updated because a record could not be found. Please try again.'
+
   settings:
     update:
       success: Profile information updated successfully.
